# ewaluator

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  env.c  policy.c
solution/: CMakeLists.txt  defs.h  err.h  error.h  evaluator.cpp  main.cpp  new.cpp  reader.cpp  some.cpp  waiter.cpp  worker_copier.cpp  worker_waiter.cpp
solution/new_sol/: defs.h  main.cpp  reader.cpp
